# AgenticFlow

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 001-project-structure.md  002-structured-logging.md  003-state-management.md  004-tool-integration.md  005-graph-orchestration.md
src/api/: main.py  schemas.py
src/core/: config.py  graph.py  state.py
src/core/nodes/: researcher.py  writer.py
src/services/: tavily_service.py
src/utils/: logging.py  pii_masker.py
tests/: conftest.py
tests/e2e/: test_api.py
tests/integration/: test_nodes.py  test_workflow_e2e.py
tests/unit/: test_pii_masker.py
